# action-stations

./: .gitignore  LICENSE  Makefile  README.md  devspeak  pyproject.toml
.github/: pull_request_template.md
.github/actions/action-stations-slack/: Dockerfile  action.yaml  send_message.py
.github/workflows/: ci.yaml  exampe-3-manual-invocation.yaml  example-1-lint-and-unit-tests.yaml  example-2-caching.yaml  example-3-manual-invocation.yaml  example-4-manual-invocation-with-parameters.yaml  example-5-cdk-with-environments.yaml  example-6-actions-action.yaml
example-1-lint-and-unit-tests/: README.md  pyproject.toml
example-1-lint-and-unit-tests/src/: paddle.py
example-1-lint-and-unit-tests/tests/: test_paddle.py
example-2-caching/: README.md  pyproject.toml
example-2-caching/src/: get_datetime.py
example-2-caching/tests/: test_get_datetime.py
example-3-manual-invocation/: README.md  hello-manual.txt  hello-other.txt
example-4-manual-invocation-with-parameters/: README.md  hello.sh
example-5-cdk-with-environments/: Makefile  README.md  package-lock.json  package.json  pyproject.toml
example-5-cdk-with-environments/cdk/: app.py  example_stack.py
example-5-cdk-with-environments/src/: put_message.py
example-5-cdk-with-environments/tests/integration/: conftest.py  test_put_message.py
example-5-cdk-with-environments/tests/unit/: conftest.py  test_put_message.py  test_stack_outputs.json
example-6-actions-action/: README.md
