[tool.poetry]
name = "example-2"
version = "0.1.0"
description = "Example demoing using caching in GitHub Actions"
authors = ["Ciaran Evans <ciaran@developmentseed.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
isort = "^5.8.0"
flake8 = "^3.9.2"
pytest = "^6.2.4"
assertpy = "^1.1"
freezegun = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
